tests/ui/f-string/backslash_error.rs
pub fn main() {
    let a = "foo\{";
    //~ ERROR invalid escape
    let b = "bar\}";
    //~ ERROR invalid escape
}
